# sreal

./: package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs  mpv.rs
src/components/video/: PipControls.tsx  VideoControls.tsx
src/hooks/: useAutoplay.ts  useVideoPlayback.ts
src/lib/: tauri.ts
src/routes/: pip.tsx
src/routes/video/: [id].tsx
