[package]
name = "desktop"
version = "0.0.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }
#ffmpeg-sys-next = { version = "8.0.1", features = ["build", "static"] }


[dependencies]
tokio = "1.47.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = ["macos-private-api", "specta", "unstable", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
specta = { version = "=2.0.0-rc.20", features = [
	"derive",
	"serde_json",
	"uuid",
] }
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
specta-typescript = "0.0.7"

libmpv2 = { git = "https://github.com/kohsine/libmpv2-rs" }

raw-window-handle = "0.6.2"
tauri-plugin-http = { version = "2" ,features = ["default"] }

# Video Player
glutin = "0.32"
gl = "0.14"
cidre = "0.11.3"
tauri-plugin-opener = "2"
tauri-plugin-stronghold = "2"
keyring = "3.6"
argon2 = "0.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }


objc2-app-kit = "0.3.2"

[profile.dev.package.scrypt]
opt-level = 3
